--- a/backend/tennis/requirements.txt
+++ b/backend/tennis/requirements.txt
@@ -6,6 +6,7 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 defusedxml==0.7.1
 Django==4.2.13
+django-cors-headers==4.3.1
 django-filter==24.2
 django-modelcluster==6.3
 django-permissionedforms==0.1
