--- a/frontend/.devcontainer/devcontainer.json
+++ b/frontend/.devcontainer/devcontainer.json
@@ -4,12 +4,10 @@
     "service": "frontend",
     "workspaceFolder": "/app",
     "forwardPorts": [3000, 8000],
-    "runArgs": ["--user", "node"],
     "build": {
         "dockerCompose": {
             "runServices": ["frontend", "backend", "db"]
         }
     },
-    "overrideCommand": false,
-    "postCreateCommand": "echo 'Container ready!'"
+    "overrideCommand": false
 }
