--- a/frontend/.devcontainer/devcontainer.json
+++ b/frontend/.devcontainer/devcontainer.json
@@ -9,5 +9,6 @@
             "runServices": ["frontend", "backend", "db"]
         }
     },
-    "overrideCommand": false
+    "overrideCommand": false,
+    "postCreateCommand": "echo 'Container ready!'"
 }
