--- a/backend/tennis/Dockerfile
+++ b/backend/tennis/Dockerfile
@@ -1,6 +1,4 @@
 FROM python:3.8.1-slim-buster as base
-WORKDIR /app
-EXPOSE 8000
 RUN apt-get update --yes --quiet && apt-get install --yes --quiet --no-install-recommends \
     build-essential \
     libpq-dev \
@@ -10,23 +8,22 @@ RUN apt-get update --yes --quiet && apt-get install --yes --quiet --no-install-r
     libwebp-dev \
     sudo \
  && rm -rf /var/lib/apt/lists/*
-
 # Create a non-root user
 RUN useradd -ms /bin/bash django
 RUN echo 'django ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 USER django
-
+WORKDIR /app/tennis
+EXPOSE 8000
 # Copy the pip-install script and make it executable
-COPY pip-install.sh /usr/local/bin/pip-install
+COPY --chown=node:node pip-install.sh /usr/local/bin/pip-install
 RUN sudo chmod +x /usr/local/bin/pip-install
-
-COPY requirements.txt /
+COPY --chown=node:node requirements.txt /
 RUN pip install -r /requirements.txt
-
-COPY . .
+COPY --chown=node:node . .
 
 FROM base as dev
 USER django
+WORKDIR /app/tennis
 CMD ["tail", "-f", "/dev/null"]
 
 FROM base as prod
