added oauth2 to django

--- a/backend/tennis/requirements.txt
+++ b/backend/tennis/requirements.txt
@@ -3,12 +3,15 @@ asgiref==3.8.1
 backports.zoneinfo==0.2.1
 beautifulsoup4==4.12.3
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
+cryptography==42.0.8
 defusedxml==0.7.1
 Django==4.2.13
 django-cors-headers==4.3.1
 django-filter==24.2
 django-modelcluster==6.3
+django-oauth-toolkit==2.4.0
 django-permissionedforms==0.1
 django-taggit==5.0.1
 django-treebeard==4.7.1
@@ -17,12 +20,15 @@ draftjs-exporter==5.0.0
 et-xmlfile==1.1.0
 filetype==1.2.0
 idna==3.7
+jwcrypto==1.5.6
 l18n==2021.3
 laces==0.1.1
+oauthlib==3.2.2
 openpyxl==3.1.2
 pillow==10.3.0
 pillow-heif==0.16.0
 psycopg==3.1.19
+pycparser==2.22
 pytz==2024.1
 requests==2.32.2
 six==1.16.0
