--- a/backend/dev/docker-compose.yml
+++ b/backend/dev/docker-compose.yml
@@ -14,6 +14,9 @@ services:
       - DATABASE_PASSWORD=db_password
       - DATABASE_NAME=tennis
       - DATABASE_PORT=5432
+      - GITHUB_OAUTH_CLIENT_ID=Ov23li1tNNP8ZZ3WuN5s
+      - GITHUB_OAUTH_CLIENT_SECRET=88ba68738ec23a1ba465d147976f9d7ab63950b9
+      - PYTHONUNBUFFERED=1
     volumes:
       - ../:/app
     command: /bin/sh -c "python manage.py migrate && tail -f /dev/null"
