--- a/backend/tennis/requirements.txt
+++ b/backend/tennis/requirements.txt
@@ -29,9 +29,14 @@ pillow==10.3.0
 pillow-heif==0.16.0
 psycopg==3.1.19
 pycparser==2.22
+PyJWT==2.8.0
+python3-openid==3.2.0
 pytz==2024.1
 requests==2.32.2
+requests-oauthlib==2.0.0
 six==1.16.0
+social-auth-app-django==5.4.1
+social-auth-core==4.5.4
 soupsieve==2.5
 sqlparse==0.5.0
 telepath==0.3.1
