--- a/frontend/dev/docker-compose.yml
+++ b/frontend/dev/docker-compose.yml
@@ -6,16 +6,19 @@ services:
       target: dev
     ports:
       - "3000:3000"
+    depends_on:
+      - backend
     environment:
-      - BACKEND_HOST=backend
+      - SERVER_SIDE_BACKEND_HOST=backend
+      - CLIENT_SIDE_BACKEND_HOST=localhost
       - BACKEND_PORT=8000
     volumes:
-      - ../:/app
+      - ../:/app 
   backend:
     build:
       context: ../../backend/tennis
       dockerfile: Dockerfile
-      target: prod
+      target: dev
     ports:
       - "8000:8000"
     depends_on:
@@ -28,6 +31,11 @@ services:
       - DATABASE_PORT=5432
       - FRONTEND_HOST=frontend
       - FRONTEND_PORT=3000
+      - GITHUB_OAUTH_CLIENT_ID=Ov23li1tNNP8ZZ3WuN5s
+      - GITHUB_OAUTH_CLIENT_SECRET=88ba68738ec23a1ba465d147976f9d7ab63950b9
+      - PYTHONUNBUFFERED=1
+    volumes:
+      - ../../backend/:/app
     command: /bin/sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
   db:
     image: postgres:alpine3.19
