successfully stores the detection results in db

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 docker-compose.override.yml
 **/node_modules/
+**/.env.local
 __pycache__/
+backend/tennis/media
+backend/tennis/random
+backend/tennis/video.mp4
+backend-tmp
