--- a/backend/tennis/Dockerfile
+++ b/backend/tennis/Dockerfile
@@ -1,14 +1,16 @@
-FROM python:3.8.1-slim-buster as base
+FROM python:3.8.1-slim-buster AS base
+# TODO: Optimize package installation
 RUN apt-get update --yes --quiet && apt-get install --yes --quiet --no-install-recommends \
-    build-essential \
-    libpq-dev \
-    libmariadbclient-dev \
-    libjpeg62-turbo-dev \
-    zlib1g-dev \
-    libwebp-dev \
+    libglib2.0-0 \
+    libsm6 \
+    libxext6 \
+    libxrender-dev \
+    libgstreamer1.0-0 \
+    libgstreamer-plugins-base1.0-0 \
+    libgtk2.0-dev \
+    libgtk-3-dev \
     sudo \
- && rm -rf /var/lib/apt/lists/*
-# Create a non-root user
+    && rm -rf /var/lib/apt/lists/*
 RUN useradd -ms /bin/bash django
 RUN echo 'django ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 USER django
@@ -21,11 +23,11 @@ COPY --chown=django:django requirements.txt /
 RUN pip install -r /requirements.txt
 COPY --chown=django:django . .
 
-FROM base as dev
+FROM base AS dev
 USER django
 WORKDIR /app/tennis
 CMD ["tail", "-f", "/dev/null"]
 
-FROM base as prod
+FROM base AS prod
 USER django
 CMD ["tail", "-f", "/dev/null"]
