--- a/frontend/dev/docker-compose.yml
+++ b/frontend/dev/docker-compose.yml
@@ -14,6 +14,33 @@ services:
       - BACKEND_PORT=8000
     volumes:
       - ../:/app 
+  celery:
+    build:
+      context: ../../backend/tennis
+      dockerfile: Dockerfile
+      target: dev
+    command: /home/django/.local/bin/celery -A artoftennis worker -l info
+    volumes:
+      - ../../backend/:/app
+    depends_on:
+      - backend
+      - redis
+    environment:
+      - DATABASE_HOST=db
+      - DATABASE_USER=db_user
+      - DATABASE_PASSWORD=db_password
+      - DATABASE_NAME=tennis
+      - DATABASE_PORT=5432
+      - PYTHONUNBUFFERED=1
+      - IS_PROD=False 
+    env_file:
+      - .env.local
+  redis:
+    image: "redis:alpine"
+    ports:
+      - "6379:6379"
+    volumes:
+      - art_of_tennis_redis_data_front:/data
   backend:
     build:
       context: ../../backend/tennis
@@ -29,11 +56,10 @@ services:
       - DATABASE_PASSWORD=db_password
       - DATABASE_NAME=tennis
       - DATABASE_PORT=5432
-      - FRONTEND_HOST=frontend
-      - FRONTEND_PORT=3000
-      - GITHUB_OAUTH_CLIENT_ID=Ov23li1tNNP8ZZ3WuN5s
-      - GITHUB_OAUTH_CLIENT_SECRET=88ba68738ec23a1ba465d147976f9d7ab63950b9
       - PYTHONUNBUFFERED=1
+      - IS_PROD=False
+    env_file:
+      - .env.local
     volumes:
       - ../../backend/:/app
     command: /bin/sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
@@ -49,3 +75,4 @@ services:
       - art_of_tennis_postgres_front:/var/lib/postgresql/data
 volumes:
   art_of_tennis_postgres_front:
+  art_of_tennis_redis_data_front:
