--- a/.github/workflows/destroy-infra.yml
+++ b/.github/workflows/destroy-infra.yml
@@ -1,4 +1,4 @@
-name: Infrastructure Creation 
+name: Infrastructure Destroy
 
 on:
   workflow_dispatch:  # Allows the workflow to be manually triggered
