--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -1,28 +1,24 @@
-name: Infrastructure Creation 
+name: Terraform
 
 on:
-  workflow_dispatch:  # Allows the workflow to be manually triggered
+  push:
+    branches:
+      - main
 
 jobs:
   terraform:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v1
       with:
-        terraform_version: 1.5.0  # Specify the Terraform version you want to use
+        terraform_version: 1.4.6
 
-    - name: Azure Login
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-    - name: Terraform Init
-      run: terraform init
+    - name: Terraform Init with Reconfigure
+      run: terraform init -reconfigure
       env:
         ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
         ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
@@ -31,15 +27,16 @@ jobs:
 
     - name: Terraform Plan
       run: terraform plan
-      working-directory: azure
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
     - name: Terraform Apply
       run: terraform apply -auto-approve
-      working-directory: azure
-
-    - name: Output ACR Information
-      run: |
-        echo "ACR Login Server: $(terraform output -raw acr_login_server)"
-        echo "ACR Admin Username: $(terraform output -raw acr_admin_username)"
-        echo "ACR Admin Password: $(terraform output -raw acr_admin_password)"
-      working-directory: azure
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
