--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -24,8 +24,8 @@ jobs:
     #     ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
 
-    - name: Terraform Init with Reconfigure
-      run: terraform init -reconfigure
+    - name: Terraform Init
+      run: terraform init
       env:
         ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
         ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
