--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,38 +8,40 @@ on:
 jobs:
   get-acr-name:
     runs-on: ubuntu-latest
+    needs: [set-env-branch, get-config]
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Azure CLI
-        uses: azure/login@v1
+      - name: Call Terraform Workflow to Get ACR Name
+        id: call-terraform
+        uses: ./.github/workflows/tf-gha-install-terraform.yml
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          TFAction: "output"
+          dply_environment: ${{ needs.set-env-branch.outputs.config-file }}
+          location: ${{ needs.get-config.outputs.location }}
+          namespace: ${{ needs.get-config.outputs.namespace }}
+          postfix: ${{ needs.get-config.outputs.postfix }}
+          environment: ${{ needs.get-config.outputs.environment }}
+          terraform_version: ${{ needs.get-config.outputs.terraform_version }}
+          terraform_workingdir: ${{ needs.get-config.outputs.terraform_workingdir }}
+          terraform_st_location: ${{ needs.get-config.outputs.terraform_st_location }}
+          terraform_st_storage_account: ${{ needs.get-config.outputs.terraform_st_storage_account }}
+          terraform_st_resource_group: ${{ needs.get-config.outputs.terraform_st_resource_group }}
+          terraform_st_container_name: ${{ needs.get-config.outputs.terraform_st_container_name }}
+          terraform_st_key: ${{ needs.get-config.outputs.terraform_st_key }}
+          terraform_plan_location: ${{ needs.get-config.outputs.location }}
+          terraform_plan_vnet: "TBD" # TBD
+        secrets:
+          azure_creds: ${{ secrets.AZURE_CREDENTIALS }}
+          clientId: ${{ secrets.ARM_CLIENT_ID }}
+          clientSecret: ${{ secrets.ARM_CLIENT_SECRET }}
+          subscriptionId: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          tenantId: ${{ secrets.ARM_TENANT_ID }}
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-
-      - name: Initialize Terraform
-        working-directory: infrastructure
-        run: |
-          terraform init -backend-config='storage_account_name=${{ secrets.TF_STORAGE_ACCOUNT }}' \
-                          -backend-config='container_name=${{ secrets.TF_CONTAINER_NAME }}' \
-                          -backend-config='key=${{ secrets.TF_STATE_KEY }}' \
-                          -backend-config='resource_group_name=${{ secrets.TF_RESOURCE_GROUP }}'
-        env:
-          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-
-      - name: Get ACR name from Terraform output
-        id: get-acr-name
-        working-directory: infrastructure
-        run: |
-          ACR_NAME=$(terraform output -raw name)
-          echo "ACR_NAME=${ACR_NAME}" >> $GITHUB_ENV
+      - name: Set ACR Name
+        run: echo "ACR_NAME=$(echo ${{ steps.call-terraform.outputs.acr_name }})" >> $GITHUB_ENV
 
   build-and-push:
     runs-on: ubuntu-latest
