--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -5,10 +5,36 @@ on:
     branches:
       - master
 
-jobs:
-  get-acr-name:
-    runs-on: ubuntu-latest
+env:
+  config_env: "none"
 
+jobs:
+  set-env-branch:
+    runs-on: ubuntu-latest
+    outputs:
+      config-file: ${{ steps.set-output-defaults.outputs.config-file }}
+    steps:
+      - id: set-prod-branch
+        name: Set Prod Branch
+        if: ${{ github.ref == 'refs/heads/main' }}
+        run: echo "config_env=config-infra-prod.yml" >> $GITHUB_ENV
+      - id: set-dev-branch
+        name: Set Dev Branch
+        if: ${{ github.ref != 'refs/heads/main' }}
+        run: echo "config_env=config-infra-dev.yml" >> $GITHUB_ENV
+      - id: set-output-defaults
+        name: Set Output Defaults
+        run: echo "config-file=$config_env" >> $GITHUB_OUTPUT
+
+  get-config:
+    needs: set-env-branch
+    uses: Azure/mlops-templates/.github/workflows/read-yaml.yml@main
+    with:
+      file_name: ${{ needs.set-env-branch.outputs.config-file }}
+
+  get-acr-name:
+    needs: get-config
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -22,13 +48,12 @@ jobs:
         uses: hashicorp/setup-terraform@v2
 
       - name: Terraform Init
-        working-directory: infrastructure
         run: |
-          terraform -chdir=${{ inputs.terraform_workingdir }} init \
-            -backend-config="storage_account_name=${{ secrets.TF_STORAGE_ACCOUNT }}" \
-            -backend-config="container_name=${{ secrets.TF_CONTAINER_NAME }}" \
-            -backend-config="key=${{ secrets.TF_STATE_KEY }}" \
-            -backend-config="resource_group_name=${{ secrets.TF_RESOURCE_GROUP }}"
+          terraform -chdir=${{ needs.get-config.outputs.terraform_workingdir }} init \
+            -backend-config="storage_account_name=${{ needs.get-config.outputs.terraform_st_storage_account }}" \
+            -backend-config="container_name=${{ needs.get-config.outputs.terraform_st_container_name }}" \
+            -backend-config="key=${{ needs.get-config.outputs.terraform_st_key }}" \
+            -backend-config="resource_group_name=${{ needs.get-config.outputs.terraform_st_resource_group }}"
         env:
           ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
@@ -36,8 +61,7 @@ jobs:
           ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
       - name: Terraform Output
-        working-directory: infrastructure
-        run: terraform output -json > output.json
+        run: terraform -chdir=${{ needs.get-config.outputs.terraform_workingdir }} output -json > output.json
         env:
           ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
@@ -45,15 +69,13 @@ jobs:
           ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
       - name: Extract ACR Name
-        working-directory: infrastructure
         run: |
           ACR_NAME=$(jq -r .name.value output.json)
           echo "ACR_NAME=${ACR_NAME}" >> $GITHUB_ENV
 
   build-and-push:
-    runs-on: ubuntu-latest
     needs: get-acr-name
-
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -67,7 +89,7 @@ jobs:
         run: |
           az acr login --name ${{ env.ACR_NAME }}
 
-      - name: Build and push Docker images
+      - name: Build and Push Docker Images
         run: |
           BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed 's/\//-/g')
           for service in service1 service2 service3; do
