--- a/frontend/art-of-tennis/Dockerfile
+++ b/frontend/art-of-tennis/Dockerfile
@@ -1,8 +1,19 @@
+# FROM node:lts-alpine3.19 as base 
+# RUN apk update && apk add --no-cache sudo && echo 'node ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
+# USER node
+# WORKDIR /app/art-of-tennis
+# COPY --chown=node:node package*.json ./
+# RUN npm install
+# COPY --chown=node:node . .
+# EXPOSE 3000
+
+
 FROM node:lts-alpine3.19 as base 
 RUN apk update && apk add --no-cache sudo && echo 'node ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 USER node
 WORKDIR /app/art-of-tennis
 COPY --chown=node:node package*.json ./
+RUN sudo chown -R node:node /app/art-of-tennis
 RUN npm install
 COPY --chown=node:node . .
 EXPOSE 3000
@@ -13,3 +24,8 @@ USER node
 ENV NODE_ENV=development
 # Do nothing, just wait for frontend developers to run `npm run dev`
 CMD ["tail", "-f", "/dev/null"]
+
+
+
+
+
