--- a/config-infra-dev.yml
+++ b/config-infra-dev.yml
@@ -10,6 +10,24 @@ variables:
   postfix: 0002
   location: eastus
   environment: dev
+  acr_name: craot00002dev
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   # Azure DevOps
   ado_service_connection_rg: Azure-ARM-Dev
