--- a/.github/workflows/tf-gha-deploy-infra.yml
+++ b/.github/workflows/tf-gha-deploy-infra.yml
@@ -32,7 +32,7 @@ jobs:
     with:
       file_name: ${{ needs.set-env-branch.outputs.config-file}}
   test-terraform-state-deployment:
-    needs: [get-config, set-env-branch]
+    needs: [get-config, set-env-branch, extract_branch]
     uses: ./.github/workflows/tf-gha-install-terraform.yml
     with:
       TFAction: "apply"
