--- a/.github/workflows/tf-gha-deploy-infra.yml
+++ b/.github/workflows/tf-gha-deploy-infra.yml
@@ -23,6 +23,11 @@ jobs:
         name: set-output-defaults
         run: |
           echo "config-file=$config_env" >> $GITHUB_OUTPUT;
+  set-branch-name:
+    runs-on: ubuntu-latest
+    outputs:
+      config-file: ${{ steps.set-output-defaults.outputs.config-file }}
+    steps:
       - name: Extract branch name
         id: extract_branch
         run: echo "BRANCH_NAME=${GITHUB_HEAD_REF##*/}" >> $GITHUB_ENV
@@ -32,7 +37,7 @@ jobs:
     with:
       file_name: ${{ needs.set-env-branch.outputs.config-file}}
   test-terraform-state-deployment:
-    needs: [get-config, set-env-branch, extract_branch]
+    needs: [get-config, set-env-branch, set-branch-name]
     uses: ./.github/workflows/tf-gha-install-terraform.yml
     with:
       TFAction: "apply"
@@ -49,7 +54,7 @@ jobs:
       terraform_st_container_name: ${{ needs.get-config.outputs.terraform_st_container_name }}
       terraform_st_key: ${{ needs.get-config.outputs.terraform_st_key }}
       terraform_plan_location: ${{ needs.get-config.outputs.location }}
-      branch_name: ${{ needs.extract_branch.outputs.BRANCH_NAME }}
+      branch_name: ${{ needs.set-branch-name.outputs.BRANCH_NAME }}
     secrets:
       azure_creds: ${{ secrets.AZURE_CREDENTIALS }}
       clientId: ${{ secrets.ARM_CLIENT_ID }}
