--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -33,12 +33,12 @@ jobs:
 
       - name: Build and push backend image
         run: |
-          az acr build --registry ${{ env.ACR_NAME }} --image backend:${{ env.BRANCH_NAME }} backend/tennis/
+          az acr build --registry ${{ env.ACR_NAME }} --image backend-${{ env.BRANCH_NAME }} backend/tennis/
 
       - name: Build and push frontend image
         run: |
-          az acr build --registry ${{ env.ACR_NAME }} --image frontend:${{ env.BRANCH_NAME }} frontend/art-of-tennis/
+          az acr build --registry ${{ env.ACR_NAME }} --image frontend-${{ env.BRANCH_NAME }} frontend/art-of-tennis/
 
       - name: Build and push celery image
         run: |
-          az acr build --registry ${{ env.ACR_NAME }} --image celery:${{ env.BRANCH_NAME }} backend/tennis/
+          az acr build --registry ${{ env.ACR_NAME }} --image celery-${{ env.BRANCH_NAME }} backend/tennis/
