--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -34,17 +34,17 @@ jobs:
       - name: Build and push backend image
         run: |
           az acr build --registry ${{ env.ACR_NAME }} \
-          --image backend-${{ env.BRANCH_NAME }} \
+          --image backend-${{ env.BRANCH_NAME }}:latest \
           --target prod backend/tennis/
 
       - name: Build and push frontend prod image
         run: |
           az acr build --registry ${{ env.ACR_NAME }} \
-          --image frontend-${{ env.BRANCH_NAME }} \
+          --image frontend-${{ env.BRANCH_NAME }}:latest \
           --target prod frontend/art-of-tennis/
 
       - name: Build and push celery prod image
         run: |
           az acr build --registry ${{ env.ACR_NAME }} \
-          --image celery-${{ env.BRANCH_NAME }} \
+          --image celery-${{ env.BRANCH_NAME }}:latest \
           --target prod backend/tennis/
