--- a/.github/workflows/tf-gha-deploy-infra.yml
+++ b/.github/workflows/tf-gha-deploy-infra.yml
@@ -139,12 +139,6 @@ jobs:
   deploy-azure-resources:
     runs-on: ubuntu-latest
     needs: [get-config, get-latest-image-digest]
-    secrets:
-      azure_creds: ${{ secrets.AZURE_CREDENTIALS }}
-      clientId: ${{ secrets.ARM_CLIENT_ID }}
-      clientSecret: ${{ secrets.ARM_CLIENT_SECRET }}
-      subscriptionId: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      tenantId: ${{ secrets.ARM_TENANT_ID }}
     steps:
       - name: Run Terraform Apply
         uses: ./.github/workflows/tf-gha-install-terraform.yml
@@ -165,3 +159,9 @@ jobs:
           terraform_plan_location: ${{ needs.get-config.outputs.location }}
           branch_name: ${{ needs.set-branch-name.outputs.branch-name }}
           image_digest: ${{ needs.get-latest-image-digest.outputs.latest_digest }}
+        env:
+          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+          AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
